--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 .header {
     width: 100%; 
     height: 85px; 
-    background-color: #000000;
+    background-color: #2E2E2E;
 }
 .home_back {
     width: 100%; 
